# nn-chess-bot

./: .gitignore  README.md  commands.txt  pyproject.toml  run_tournament.py  tournament_config.json
src/bot/: bot.py  neural_net.py
src/game/: __init__.py  __main__.py  game.py
src/tournament/: __init__.py  __main__.py  config_loader.py  tournament.py
tests/: test_network.py
